# hackathon_HSE_AI

./: .gitignore  AI.md  AI_2.md  LICENSE  README.md  prompt.md  text.md
backend/: .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
backend/app/: main.py
backend/app/api/: router.py
backend/app/core/: config.py
backend/app/features/counter/: repo.py  router.py  schemas.py  service.py
backend/app/features/genai/: api.py  client.py  schemas.py  service.py
backend/app/features/presentations/: api.py  model_constants.py  orchestrator.py  pdf.py  prompt_templates.py  renderer.py  schemas.py  service.py  storage.py
backend/app/features/uploads/: api.py  schemas.py  service.py
backend/tests/: test_counter.py  test_genai_client.py  test_presentations.py  test_uploads_service.py
frontend/: .env.example  .eslintrc.cjs  Dockerfile  nuxt.config.ts  package-lock.json  package.json
frontend/app/: app.vue
frontend/app/components/: ThemeModeSwitcher.vue
frontend/app/components/ui/popover/: PopoverContent.vue
frontend/app/components/ui/switch/: Switch.vue
frontend/app/composables/: usePresentationGenerator.ts  useTelegram.ts  useThemeMode.ts
frontend/app/lib/: api.ts
frontend/app/pages/: gen.vue  index.vue
frontend/app/plugins/: theme.client.ts
